# scdc.cloud

./: .gitignore  README.md  deploy_check.txt  deploy_check2.txt  mirror_rebuild.txt  sub_services_check.txt  tw_rebuild.txt  twinturing_build.txt
carbonos/: .dockerignore  .gitignore  README.md  docker-compose.yml  jest.config.js  next.config.ts  package-lock.json  package.json  playwright.config.ts
carbonos/backend/: README.md  pyproject.toml
carbonos/backend/alembic/: env.py
carbonos/backend/alembic/versions/: 001_initial_schema.py  002_add_user_lockout.py  003_add_surveys.py
carbonos/backend/app/: main.py  seed_prod.py
carbonos/backend/app/api/: admin.py  ai.py  auth.py  carbon.py  dashboard.py  data.py  deps.py  organization.py  pcf.py  report.py  simulation.py  survey.py
carbonos/backend/app/core/: cache.py  config.py  database.py  feature_flags.py  init_superuser.py  logging.py  metrics.py  permissions.py  security.py
carbonos/backend/app/core/middleware/: ratelimit.py  tenant.py
carbonos/backend/app/models/: audit.py  carbon.py  energy.py  organization.py  settings.py  survey.py  tenant.py  tenant_config.py  user.py
carbonos/backend/app/schemas/: __init__.py  carbon.py  energy.py  organization.py  tenant.py  user.py
carbonos/backend/app/services/: carbon_engine.py  pcf.py  report_generator.py  simulation.py
carbonos/backend/scripts/: create_superuser.py  reset_db_v2.py  seed_admin.py  seed_demo.py  seed_tenants.py  test_compat.py  test_hash.py
carbonos/backend/tests/: conftest.py  test_api.py  test_auth.py  test_security.py
(+609 files in other folders)
