# 依赖管理
[project]
name = "carbonos-api"
version = "0.1.0"
description = "CarbonOS™ 零碳园区智能运营平台 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "langchain>=0.1.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",  # Alembic 同步迁移需要
    "structlog>=24.1.0",  # P1-004: 结构化日志
    "prometheus-client>=0.20.0",  # P2: Prometheus 监控
    "bcrypt>=4.0.0",  # 密码哈希（security.py 直接使用）
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]
